<resources>
    <string name="app_name">eventseeker</string>
    <string name="fb_app_id">687206491296790</string>
    <string name="map_v2_android_key">AIzaSyC4DsIo1BknPFbcHZ5y89UygHgWxgUhFic</string>
    <string name="map_v3_browser_key">AIzaSyDhuqduP4vkcqEbDeX0nxuBE5HnvZTrt9w</string>
    <string name="api_key">9tv4fx82y43skf9yqk4djgmj</string>
    <string name="shared_secret">8cRj9S7V3eCeqC7PRUqeDeFt</string>
    <string name="shared_preference_key">beats_sdk_user</string>
    <string name="lang_english">English</string>
    <string name="lang_french">Français</string>
    <string name="lang_german">Deutsch</string>
    <string name="lang_italian">Italiano</string>
    <string name="lang_spanish">Español</string>
    <string name="lang_portuguese">Português</string>
    <string name="menu_search">Search</string>
    <string name="menu_change_location">Change Location</string>
    <string name="title_launcher">eventseeker</string>
    <string name="title_discover">Discover</string>
    <string name="title_change_location">Change Location</string>
    <string name="title_language">Language</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_sort_by">Sort by</string>
    <string name="artist_on_tour">" On Tour "</string>
    <string name="title_event_details">Event Details</string>
    <string name="title_artist_details">Artist Details</string>
    <string name="title_venue_details">Venue Details</string>
    <string name="title_following">Following</string>
    <string name="title_recommended">@string/btn_recommended</string>
    <string name="title_my_events">My Events</string>
    <string name="title_artists_news">Artist News</string>
    <string name="title_friends_activity">Friends\' Activity</string>
    <string name="title_connect_accounts">Connect Accounts</string>
    <string name="title_get_started">Get Started</string>
    <string name="title_about_us">About Us</string>
    <string name="title_eula">EULA</string>
    <string name="title_rep_code">@string/rep_code</string>
    <string name="title_search_results">Search Results</string>
    <string name="title_google_play">Google Play</string>
    <string name="title_device_library">@string/service_device_library</string>
    <string name="title_twitter">Twitter</string>
    <string name="title_spotify">Spotify</string>
    <string name="title_rdio">Rdio</string>
    <string name="title_lastfm">last.fm</string>
    <string name="title_pandora">Pandora</string>
    <string name="title_beats_music">Beats Music</string>
    <string name="title_web">Web</string>
    <string name="title_settings_mobile_app">Settings</string>
    <string name="title_logout">Logout</string>
    <string name="title_navigation">Navigation</string>
    <string name="title_login">Sign In</string>
    <string name="title_signup">Sign Up</string>
    <string name="title_find_more_artist">Find More Artists</string>
    <string name="title_popular">Popular</string>
    <string name="title_featured_list">Featured List</string>
    <string name="title_comedy">@string/btn_comedy</string>
    <string name="title_theater">@string/btn_theater</string>
    <string name="title_categories">Categories</string>
    <string name="title_alternative_rock">Alternative Rock</string>
    <string name="title_classic_rock">Classic Rock</string>
    <string name="title_indie_rock">Indie Rock</string>
    <string name="title_folk">Folk</string>
    <string name="title_country">Country</string>
    <string name="title_electronic">Electronic</string>
    <string name="title_pop">Pop</string>
    <string name="title_punk">Punk</string>
    <string name="title_hard_rock_metal">Hard Rock / Metal</string>
    <string name="title_world_music">World Music</string>
    <string name="title_blues_jazz">Blues / Jazz</string>
    <string name="title_hip_hop">Hip Hop</string>
    <string name="title_soul_r_and_b_funk">Soul / R&amp;B / Funk</string>
    <string name="title_classical">Classical</string>
    <string name="title_popular_sports">Popular Sports</string>
    <string name="title_nfl">NFL</string>
    <string name="title_nba">NBA</string>
    <string name="title_nhl">NHL</string>
    <string name="title_mlb">MLB</string>
    <string name="title_mls">MLS</string>
    <string name="no_items_found_pls_login">Please login with Facebook or Google from \'Sync Accounts\' page to see</string>
    <string name="pls_login_to_see_all_events_you_are_following">Please login with Facebook or Google from \'Sync Accounts\' page to see all the events you are following.</string>
    <string name="pls_login_to_see_to_see_recommended_events">Please login with Facebook or Google from \'Sync Accounts\' page to see recommended events for you.</string>
    <string name="pls_login_to_track_evt">To track this event you need to first login with Facebook or Google from \'Sync Accounts\' page.</string>
    <string name="pls_login_through_mobile_app">Please log in through mobile app.</string>
    <string name="pls_login_to_see_friends_activity">Please login with Facebook or Google from \'Sync Accounts\' page to see your friends activity.</string>
    <string name="pls_login_to_see_artist_news">Please login with Facebook or Google from \'Sync Accounts\' page to see artist news.</string>
    <string name="pls_login_to_submit_repcode">Please login with Facebook or Google from \'Sync Accounts\' page.</string>
    <string name="connection_lost">The Internet connection appears to be offline.</string>
    <string name="no_internet_connectivity">No Internet Connectivity</string>
    <string name="yes">Yes</string>
    <string name="go_to_login">Go to login?</string>
    <string name="add_to_calender">Add to calendar</string>
    <string name="select_calender">Select calendar</string>
    <string name="event_added_to_calender_successfully">Event added to calendar successfully!</string>
    <string name="event_not_found">Event not found to add to the calendar.</string>
    <string name="can_not_add_event_to_calender">Cannot add this event to calendar due to unknown schedule.</string>
    <string name="navigation_drawer_section_browse">BROWSE</string>
    <string name="navigation_drawer_item_discover">@string/title_discover</string>
    <string name="navigation_drawer_item_my_events">@string/title_my_events</string>
    <string name="navigation_drawer_item_artists_news">@string/title_artists_news</string>
    <string name="navigation_drawer_item_friends_activity">@string/title_friends_activity</string>
    <string name="navigation_drawer_item_following">@string/title_following</string>
    <string name="navigation_drawer_section_settings">SETTINGS</string>
    <string name="navigation_drawer_item_settings">@string/title_settings_mobile_app</string>
    <string name="navigation_drawer_item_logout">@string/title_logout</string>
    <string name="navigation_drawer_item_sync_accounts">Sync Accounts</string>
    <string name="navigation_drawer_item_change_location">@string/title_change_location</string>
    <string name="navigation_drawer_item_language">@string/title_language</string>
    <string name="navigation_drawer_section_about">ABOUT</string>
    <string name="navigation_drawer_item_invite_friends">Invite Friends</string>
    <string name="navigation_drawer_item_rate_app">Rate App</string>
    <string name="navigation_drawer_item_about">About</string>
    <string name="navigation_drawer_item_eula">@string/title_eula</string>
    <string name="navigation_drawer_item_enter_rep_code">Enter Rep Code</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">@string/menu_settings</string>
    <string name="connect_accounts_item_title">Title</string>
    <string name="connect_accounts_item_facebook">Facebook</string>
    <string name="connect_accounts_item_blank">Blank</string>
    <string name="connect_accounts_item_device_library">@string/service_device_library</string>
    <string name="connect_accounts_item_twitter">Twitter</string>
    <string name="connect_accounts_item_spotify">Spotify</string>
    <string name="connect_accounts_item_rdio">Rdio</string>
    <string name="connect_accounts_item_lastfm">Last.fm</string>
    <string name="connect_accounts_item_pandora">Pandora</string>
    <string name="connect_accounts_item_button">Button</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="google_sign_out">Google Sign Out</string>
    <string name="pls_login">Please login with Facebook or Google before you sync accounts from other services.</string>
    <string name="syncing_your_acc">Syncing your account...Please Wait...</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="connecting_account_allow_us">Connecting accounts allows us to provide relevant alerts instantly.</string>
    <string name="follow_your_favorite_Artists">Follow your favorite artists and get updates on events by syncing any of the following.</string>
    <string name="txt_service_desc_txt_fragment_device_library">Would you like the application to search your music library for artists that you can then follow? The artists will be placed under the \"Following\" section?</string>
    <string name="retrieve_artists">Retrieve Artists</string>
    <string name="evt_cat_concerts">CONCERTS</string>
    <string name="evt_cat_theater">THEATER</string>
    <string name="evt_cat_sports">SPORTS</string>
    <string name="evt_cat_arts_museums">ARTS &amp; MUSEUMS</string>
    <string name="evt_cat_dance">DANCE</string>
    <string name="evt_cat_nightlife">NIGHTLIFE</string>
    <string name="evt_cat_educational">EDUCATIONAL</string>
    <string name="evt_cat_festivals_fairs">FESTIVALS &amp; FAIRS</string>
    <string name="evt_cat_family">FAMILY</string>
    <string name="evt_cat_community">COMMUNITY</string>
    <string name="evt_cat_business_tech">BUSINESS &amp; TECH</string>
    <string name="evt_cat_tours">TOURS</string>
    <string name="plus_generic_error">Sign in with Google is not available.</string>
    <string name="already_signed_in_with_google_account">You are already signed in with Google account. Would you like to sign out from Google and sign in with Facebook account?</string>
    <string name="already_signed_in_with_facebook_account">You are already signed in with Facebook account. Would you like to sign out from Facebook and sign in with Google account?</string>
    <string name="seek_share_live">Seek. Share. Live.</string>
    <string name="eventseeker_desc">eventseeker makes artist and event discovery easy and social. We give you the tools you need so you\&apos;ll never miss an event again.</string>
    <string name="powered_by">Powered By Wcities</string>
    <string name="eventseeker">eventseeker</string>
    <string name="follow_artist">Follow Artist</string>
    <string name="artist_saved">Artist Saved!</string>
    <string name="going_lower">Going</string>
    <string name="want_to_lower">Want To</string>
    <string name="tickets_lower">Tickets</string>
    <string name="share_on_facebook">Share On Facebook</string>
    <string name="btn_sync_accounts">Sync Accounts</string>
    <string name="btn_popular_artists">Popular Artists</string>
    <string name="btn_recommended">Recommended</string>
    <string name="btn_search">Search</string>
    <string name="btn_nfl">NFL</string>
    <string name="btn_nba">NBA</string>
    <string name="btn_nhl">NHL</string>
    <string name="btn_mlb">MLB</string>
    <string name="btn_mls">MLS</string>
    <string name="select_navigation_app">Select Your Navigation App For Directions</string>
    <string name="google_maps">Google Maps</string>
    <string name="navi_bridge">Navi Bridge</string>
    <string name="scout_navigation">Scout Navigation</string>
    <string name="moovit">Moovit</string>
</resources>