<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrlVRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_navigation"
    android:layout_marginTop="@dimen/common_t_mar_pad_for_all_layout"
    android:fadeScrollbars="false"
    android:fillViewport="true">
    
	<LinearLayout android:id="@+id/lnrLytRoot"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:gravity="center"
	    android:paddingTop="@dimen/lnr_lyt_root_pad_t_b_navigation"
	    android:paddingBottom="@dimen/lnr_lyt_root_pad_t_b_navigation" >
	    
	    <TextView android:id="@+id/txtTitle"
	        android:layout_width="@dimen/txt_title_w_navigation"
	        android:layout_height="wrap_content"
	        android:text="@string/select_navigation_app"
	        android:textStyle="bold"
	        android:textSize="@dimen/txt_txt_size_navigation"
	        android:gravity="center"
	        android:layout_marginTop="@dimen/txt_title_margin_t_navigation" />
	    
	    <ImageView android:id="@+id/imgGMaps"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_google_maps_app"
	        android:layout_marginTop="@dimen/img_margin_t_navigation" />
	    
	    <TextView android:id="@+id/txtGMaps"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:textStyle="bold"
	        android:text="@string/google_maps"
	        android:textSize="@dimen/txt_txt_size_navigation"
	        android:layout_marginTop="@dimen/txt_margin_t_navigation" />
	    
	    <ImageView android:id="@+id/imgNaviBridge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_navi_bridge_app"
	        android:layout_marginTop="@dimen/img_margin_t_navigation" />
	    
	    <TextView android:id="@+id/txtNaviBridge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:text="@string/navi_bridge"
	        android:textSize="@dimen/txt_txt_size_navigation"
	        android:layout_marginTop="@dimen/txt_margin_t_navigation" />
	    
	    <ImageView android:id="@+id/imgScout"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_scout_app"
	        android:layout_marginTop="@dimen/img_margin_t_navigation" />
	    
	    <TextView android:id="@+id/txtScout"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:text="@string/scout_navigation"
	        android:textSize="@dimen/txt_txt_size_navigation"
	        android:layout_marginTop="@dimen/txt_margin_t_navigation" />
	    
	    <ImageView android:id="@+id/imgMoovit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_moovit_app"
	        android:layout_marginTop="@dimen/img_margin_t_navigation" />
	    
	    <TextView android:id="@+id/txtMoovit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:text="@string/moovit"
	        android:textSize="@dimen/txt_txt_size_navigation"
	        android:layout_marginTop="@dimen/txt_margin_t_navigation" />
	
	</LinearLayout>
	
</ScrollView>