<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:fillViewport="false"
    android:paddingTop="@dimen/common_t_mar_pad_for_all_layout" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/lnr_root_padding_fragment_follow_more_artists" >

        <LinearLayout android:id="@+id/lnrLytNFL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_nfl"
            android:gravity="center">

            <TextView
                android:id="@+id/btnNFL"
                style="@style/Widget.EventSeeker.TextView.PopularArtistCatTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_nfl"
                android:gravity="center"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/v_dummy_wt_ht_fragment_follow_more_artists"
            android:background="@android:color/transparent" />

        <LinearLayout android:id="@+id/lnrLytNBA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_nba"
            android:gravity="center">

            <TextView
                android:id="@+id/btnNBA"
                style="@style/Widget.EventSeeker.TextView.PopularArtistCatTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_nba"
                android:gravity="center"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/v_dummy_wt_ht_fragment_follow_more_artists"
            android:background="@android:color/transparent" />

        <LinearLayout android:id="@+id/lnrLytNHL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_nhl"
            android:gravity="center">

            <TextView
                android:id="@+id/btnNHL"
                style="@style/Widget.EventSeeker.TextView.PopularArtistCatTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_nhl"
                android:gravity="center"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/v_dummy_wt_ht_fragment_follow_more_artists"
            android:background="@android:color/transparent" />

        <LinearLayout android:id="@+id/lnrLytMLB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_mlb"
            android:gravity="center">

            <TextView
                android:id="@+id/btnMLB"
                style="@style/Widget.EventSeeker.TextView.PopularArtistCatTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_mlb"
                android:gravity="center"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/v_dummy_wt_ht_fragment_follow_more_artists"
            android:background="@android:color/transparent" />

        <LinearLayout android:id="@+id/lnrLytMLS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_mls"
            android:gravity="center">

            <TextView
                android:id="@+id/btnMLS"
                style="@style/Widget.EventSeeker.TextView.PopularArtistCatTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_mls"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>