<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/lnr_tabs_ht_fragment_following_tab"
    android:background="@android:color/white"
    android:elevation="@dimen/elevation_lnr_follow_more_artist_fragment_following_tab"
    android:orientation="horizontal" >

    <CheckBox
        android:id="@+id/btnSyncAccounts"
        style="@style/Widget.EventSeeker.Button.Transparent"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:button="@null"
        android:drawableTop="@drawable/slctr_tabs_btn_sync_artists"
        android:paddingTop="@dimen/btn_tabs_pad_t_fragment_following_tab"
        android:text="@string/btn_sync_accounts"
        android:textAllCaps="false"
        android:textColor="@color/slctr_clr_primary_on_tabs_txt_clr_off"
        android:textSize="@dimen/btn_tabs_txt_size_fragment_following_tab" />

    <View
        android:layout_width="@dimen/v_divider_w_fragment_following_tab"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/v_divider_t_b_fragment_following_tab"
        android:layout_marginTop="@dimen/v_divider_t_b_fragment_following_tab"
        android:background="@color/tabs_seperator" />

    <CheckBox
        android:id="@+id/btnPopularArtists"
        style="@style/Widget.EventSeeker.Button.Transparent"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:button="@null"
        android:drawableTop="@drawable/slctr_tabs_btn_popular_artists"
        android:paddingTop="@dimen/btn_tabs_pad_t_fragment_following_tab"
        android:text="@string/btn_popular_artists"
        android:textAllCaps="false"
        android:textColor="@color/slctr_clr_primary_on_tabs_txt_clr_off"
        android:textSize="@dimen/btn_tabs_txt_size_fragment_following_tab" />

    <View
        android:layout_width="@dimen/v_divider_w_fragment_following_tab"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/v_divider_t_b_fragment_following_tab"
        android:layout_marginTop="@dimen/v_divider_t_b_fragment_following_tab"
        android:background="@color/tabs_seperator" />

    <CheckBox
        android:id="@+id/btnRecommended"
        style="@style/Widget.EventSeeker.Button.Transparent"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:button="@null"
        android:drawableTop="@drawable/slctr_tabs_btn_recommended_artists"
        android:paddingTop="@dimen/btn_tabs_pad_t_fragment_following_tab"
        android:text="@string/btn_recommended"
        android:textAllCaps="false"
        android:textColor="@color/slctr_clr_primary_on_tabs_txt_clr_off"
        android:textSize="@dimen/btn_tabs_txt_size_fragment_following_tab" />

    <View
        android:layout_width="@dimen/v_divider_w_fragment_following_tab"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/v_divider_t_b_fragment_following_tab"
        android:layout_marginTop="@dimen/v_divider_t_b_fragment_following_tab"
        android:background="@color/tabs_seperator" />

    <CheckBox
        android:id="@+id/btnSearch"
        style="@style/Widget.EventSeeker.Button.Transparent"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:button="@null"
        android:drawableTop="@drawable/slctr_tabs_btn_search_artists"
        android:paddingTop="@dimen/btn_tabs_pad_t_fragment_following_tab"
        android:text="@string/btn_search"
        android:textAllCaps="false"
        android:textColor="@color/slctr_clr_primary_on_tabs_txt_clr_off"
        android:textSize="@dimen/btn_tabs_txt_size_fragment_following_tab" />

</LinearLayout>