<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/txt_mar_pad_l_r_fb_dialog"
    android:layout_marginRight="@dimen/txt_mar_pad_l_r_fb_dialog" >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingBottom="@dimen/txt_mar_pad_t_b_fb_dialog"
        android:paddingLeft="@dimen/txt_mar_pad_l_r_fb_dialog"
        android:paddingRight="@dimen/txt_mar_pad_l_r_fb_dialog"
        android:paddingTop="@dimen/txt_mar_pad_t_b_fb_dialog"
        android:text="@string/follow_artist"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/txt_size_fb_dialog" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/txt_mar_pad_t_b_fb_dialog"
        android:paddingLeft="@dimen/txt_mar_pad_l_r_fb_dialog"
        android:paddingRight="@dimen/txt_mar_pad_l_r_fb_dialog"
        android:paddingTop="@dimen/txt_mar_pad_t_b_fb_dialog"
        android:layout_marginTop="@dimen/txt_mar_pad_t_b_fb_dialog"
        android:text="@string/artist_saved"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/txt_size_msg_btn_fb_dialog" />

    <!-- <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/white" /> -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/txt_mar_pad_t_b_fb_dialog"
        android:paddingLeft="@dimen/txt_mar_pad_l_r_fb_dialog"
        android:paddingRight="@dimen/txt_mar_pad_l_r_fb_dialog"
        android:paddingTop="@dimen/txt_mar_pad_t_b_fb_dialog" >

        <Button
            android:id="@+id/btnFbShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_fb_continue"
            android:gravity="left|center_vertical"
            android:singleLine="true"
            android:text="@string/share_on_facebook"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_size_msg_btn_fb_dialog" />
    </RelativeLayout>

</LinearLayout>